--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -9,11 +9,10 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 98%;
+    width: 800px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
-	max-width:360px;
 }
 a:focus, a:hover {
 	font-style: italic;
@@ -52,7 +51,6 @@ header img {
 	margin: 0;
 	padding: 0;
 	position: relative;
-	width:100%;
 }
 #nav_menu ul li {
 	float: left;
