--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -9,7 +9,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 800px;
+    width: 98%; /* Changed width to 98% */
+    max-width: 960px; /* Set max width to 960px */
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -21,7 +22,7 @@ a:focus, a:hover {
 header {
 	padding: 1.5em 0 2em 0;
 	border-bottom: 3px solid #931420;
-		background-image: -moz-linear-gradient(
+	background-image: -moz-linear-gradient(
 	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
 	background-image: -webkit-linear-gradient(
 	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
@@ -40,7 +41,7 @@ header h3 {
 }
 header img {
 	float: left;
-	padding: 0 30px;
+	padding: 0 2%; /* Converted padding to percentage */
 }
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
@@ -57,7 +58,7 @@ header img {
 }
 #nav_menu ul li a {
     display: block;
-    width: 160px;
+    width: 12%; /* Converted width to percentage */
     text-align: center;
     padding: 1em 0;
     text-decoration: none;
@@ -72,6 +73,7 @@ header img {
     display: none;
     position: absolute;
     top: 100%;
+    width: 100%; /* Set submenu width to 100% */
 }
 #nav_menu ul ul li {
 	float: none;
@@ -87,9 +89,9 @@ header img {
 
 /* the styles for the section */
 section {
-	width: 525px;
+	width: 70%; /* Converted width to percentage */
 	float: right;
-	padding: 0 20px 20px 20px;
+	padding: 0 3% 20px 3%; /* Converted padding to percentage */
 }
 section h1 {
 	font-size: 150%;
@@ -137,9 +139,9 @@ article img {
 
 /* the styles for the aside */
 aside {
-	width: 215px;
+	width: 28%; /* Converted width to percentage */
 	float: right;
-	padding: 0 0 20px 20px;
+	padding: 0 0 20px 3%; /* Converted padding to percentage */
 }
 aside h2 {
 	color: #800000;
@@ -157,6 +159,16 @@ aside img {
 
 /* the styles for the footer */
 footer {
+	background-color: #931420;
+	clear: both;
+}
+footer p {
+	text-align: center;
+	color: white;
+	padding: 1em 0;
+}
+
+
 	background-color: #931420;
 	clear: both;
 
