--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -9,8 +9,7 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 98%; /* Changed width to 98% */
-    max-width: 960px; /* Set max width to 960px */
+    width: 800px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -22,7 +21,7 @@ a:focus, a:hover {
 header {
 	padding: 1.5em 0 2em 0;
 	border-bottom: 3px solid #931420;
-	background-image: -moz-linear-gradient(
+		background-image: -moz-linear-gradient(
 	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
 	background-image: -webkit-linear-gradient(
 	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
@@ -41,7 +40,7 @@ header h3 {
 }
 header img {
 	float: left;
-	padding: 0 2%; /* Converted padding to percentage */
+	padding: 0 30px;
 }
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
@@ -58,7 +57,7 @@ header img {
 }
 #nav_menu ul li a {
     display: block;
-    width: 12%; /* Converted width to percentage */
+    width: 160px;
     text-align: center;
     padding: 1em 0;
     text-decoration: none;
@@ -73,7 +72,6 @@ header img {
     display: none;
     position: absolute;
     top: 100%;
-    width: 100%; /* Set submenu width to 100% */
 }
 #nav_menu ul ul li {
 	float: none;
@@ -89,9 +87,9 @@ header img {
 
 /* the styles for the section */
 section {
-	width: 70%; /* Converted width to percentage */
+	width: 525px;
 	float: right;
-	padding: 0 3% 20px 3%; /* Converted padding to percentage */
+	padding: 0 20px 20px 20px;
 }
 section h1 {
 	font-size: 150%;
@@ -139,9 +137,9 @@ article img {
 
 /* the styles for the aside */
 aside {
-	width: 28%; /* Converted width to percentage */
+	width: 215px;
 	float: right;
-	padding: 0 0 20px 3%; /* Converted padding to percentage */
+	padding: 0 0 20px 20px;
 }
 aside h2 {
 	color: #800000;
@@ -159,16 +157,6 @@ aside img {
 
 /* the styles for the footer */
 footer {
-	background-color: #931420;
-	clear: both;
-}
-footer p {
-	text-align: center;
-	color: white;
-	padding: 1em 0;
-}
-
-
 	background-color: #931420;
 	clear: both;
 
