--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -9,10 +9,11 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 800px;
+    width: 98%; /*change the width*/
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
+	max-width:960px; /*change the max width*/
 }
 a:focus, a:hover {
 	font-style: italic;
@@ -75,6 +76,7 @@ header img {
 }
 #nav_menu ul ul li {
 	float: none;
+	width:100%; /*width 100% */
 }
 #nav_menu ul li:hover > ul {
 	display: block;
