--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -132,6 +132,8 @@ article img {
     float: right;
     margin: .5em 0 1em 1em;
     border: 1px solid black;
+    max-width:40%;
+    min-width: 150px;
 }
 
 /* aside styles */
