--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -1,312 +1,167 @@
-/* type selectors */
+/* universal and body styles */
+* {
+    margin: 0;
+    padding: 0;
+}
 html {
-	background-image: -moz-linear-gradient(to bottom, white 0%, #facd8a 100%);
-	background-image: -webkit-linear-gradient(to bottom, white 0%, #facd8a 100%);
-	background-image: -o-linear-gradient(to bottom, white 0%, #facd8a 100%);
-	background-image: linear-gradient(to bottom, white 0%, #facd8a 100%);
+    background-color: white;
 }
 body {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 100%;
-	width: 96%;                         /* changed from 990 pixels */
-	max-width: 1200px;                  /* maximum width of page */
-	background-color: white;
-	margin: 15px auto;
-	padding: 15px 0;
-	border: 1px solid black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+    width: 98%;
+    margin: 0 auto;
+    border: 3px solid #931420;
+    background-color: #fffded;
+    max-width: 800px; /* adjusted from 960px to 800px */
 }
-section, article, aside, h1, h2, h3, p {
-	margin: 0;
-	padding: 0;
-}
-section, article, aside {
-	margin-bottom: 1em;
-}
-p {
-	font-size: .875em;                  /* 14 / 16 */
-	padding-bottom: .5em;
-	line-height: 130%;
-}
-em {
-	font-weight: bold;
-}
-a {
-	font-weight: bold;
-	text-decoration: none;
-}
-a:link, a:visited {
-	color: #931420 !important;
-}
-a:hover, a:focus {
-	color: black !important;
+a:focus, a:hover {
+    font-style: italic;
 }
 
-/* the styles for the header */
+/* header styles */
 header {
-	width: 100%;                        /* full width of body */
-	padding-bottom: 2em;
+    padding: 1.5em 0 2em 0;
+    border-bottom: 3px solid #931420;
+    background-image: linear-gradient(
+        30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%
+    );
 }
 header h2 {
-	font-size: 2.25em;                  /* 36 / 16 */
-	color: #f2972e;
-	text-shadow: 2px 3px 0 black;
-	margin-left: 12.12121%;             /* 120 / 990 */
-	margin-bottom: .25em;
+    font-size: 175%;
+    color: #800000;
 }
 header h3 {
-	font-size: 1.25em;                  /* 20 / 16 */
-	font-style: italic;
-	margin-left: 12.12121%;             /* 120 / 990 */
+    font-size: 130%;
+    font-style: italic;
 }
 header img {
-	width: 8.0808%;                     /* 80 / 990 */
-	max-width: 80px;                    /* native size */
-	min-width: 40px;
-	float: left;
-	margin-left: 2.0202%;               /* 20 / 990 */
+    float: left;
+    padding: 0 3.13%; /* converted to percentage */
 }
-/* the styles for the navigation menu - operation */
+.shadow {
+    text-shadow: 2px 2px 2px #800000;
+}
+
+/* the styles for the navigation menu */
 #nav_menu ul {
-	width: 100%;                        /* full width of body */
-	list-style-type: none;
-	position: relative;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+#nav_menu ul li {
+    float: left;
+    width: 16.67%; /* moved width from <a> to <li> */
+}
+#nav_menu ul li a {
+    display: block;
+    text-align: center;
+    padding: 1em 0;
+    text-decoration: none;
+    background-color: #800000;
+    color: white;
+    font-weight: bold;
+}
+#nav_menu a.current {
+    color: yellow;
 }
 #nav_menu ul ul {
-	display: none;
-	position: absolute;
-	top: 100%;
+    display: none;
+    position: absolute;
+    top: 100%;
 }
 #nav_menu ul ul li {
-	float: none;
-	position: relative;
-}
-#nav_menu ul ul li ul {
-	position: absolute;
-	left: 100%;
-	top: 0;
-}
-#nav_menu ul li.lastitem ul li ul {
-	position: absolute;
-	left: -100%;
-	top: 0;
-}
-#nav_menu ul li {
-	float: left;
+    float: none;
+    width: 100%;
 }
 #nav_menu ul li:hover > ul {
-	display: block;
+    display: block;
 }
 #nav_menu > ul::after {
-	content: "";
-	clear: both;
-	display: block;
-}
-/* the styles for the navigation menu - formatting */
-#nav_menu ul {
-	margin: 0;
-	padding: 0;
-}
-#nav_menu ul li {
-	width: 20%;                         /* 198 / 990 */
-}
-#nav_menu ul li a {
-	text-align: center;
-	display: block;
-	padding: .7em 0;
-	background-color: #facd8a;
-}
-#nav_menu ul li a.current {
-	color: #f2972e !important;
-}
-#nav_menu ul li:hover ul {
-	width: 100%;
-}
-#nav_menu ul li:hover ul li:hover ul li {
-	width: 100%;
+    content: "";
+    clear: both;
+    display: block;
 }
 
-/* the styles for the section */
+/* section styles */
 section {
-	width: 54.0404%;                         /* 535 / 990 */
-	float: left;
-	margin-left: 2.0202%;                    /* 20 / 990 */
-	padding: 1.5em 2.52525% 0 0;             /* 25 / 990 */
-
-}
-section ul {
-	margin-top: 0;
-	margin-bottom: 1.5em;
-}
-section li {
-	font-size: .875em;                       /* 14 / 16 */
-	padding-bottom: .35em;
+    width: 54.69%; /* converted to percentage */
+    float: right;
+    padding: 0 2.08% 20px 2.08%; /* converted to percentage */
 }
 section h1 {
-	font-size: 1.625em;                      /* 26 / 16 */
-	margin-bottom: .35em;
+    font-size: 150%;
+    padding: .5em 0 .25em 0;
+    margin: 0;
 }
 section h2 {
-	font-size: 1.25em;                       /* 20 / 16 */
-	margin-bottom: .35em;
+    color: #800000;
+    font-size: 130%;
+    padding: .5em 0 .25em 0;
 }
-a.date_passed {
-	color: gray;
+section p {
+    padding-bottom: .5em;
 }
-/* the styles for the article */
-article {
-	width: 54.0404%;                         /* 535 / 990 */
-	float: left;
-	margin-left: 2.0202%;                    /* 20 / 990 */
-	padding: 1.5em 2.52525% 0 0;             /* 25 / 990 */
+section blockquote {
+    padding: 0 2em;
+    font-style: italic;
+}
+section ul {
+    padding: 0 0 .25em 1.25em;
+    list-style-type: circle;
+}
+section li {
+    padding-bottom: .35em;
+}
 
+/* article styles */
+article {
+    padding: .5em 0;
+    border-top: 2px solid #800000;
+    border-bottom: 2px solid #800000;
 }
-article h1 {
-	font-size: 1.625em;                      /* 26 / 16 */
-	margin-bottom: .35em;
+article h2 {
+    padding-top: 0;
+}
+article h3 {
+    font-size: 105%;
+    padding-bottom: .25em;
 }
 article img {
-	margin-bottom: 1em;
-	max-width: 100%;                         /* full width of article */
+    float: right;
+    margin: .5em 0 1em 1em;
+    border: 1px solid black;
+    max-width:40%;
+    min-width: 150px;
 }
-article p {
-	margin-bottom: .5em;
-}
-/* the styles for the sidebar */
+
+/* aside styles */
 aside {
-	width: 35.35353%;                        /* 350 / 990 */
-	float: left;
-	padding: 2.0202%;                        /* 20 / 990 */
-	background-color: #ffebc6;
-	margin: 1.5em 2.0202% 0 0;               /* 20 / 990 */
+    width: 22.40%; /* converted to percentage */
+    float: right;
+    padding: 0 0 20px 2.08%; /* left padding converted to percentage */
 }
 aside h2 {
-	font-size: 1.25em;                       /* 20 / 16 */
-	padding-bottom: .5em;
+    color: #800000;
+    font-size: 130%;
+    padding: .5em 0 .25em 0;
 }
 aside h3 {
-	font-size: 1em;                          /* base font size */
-	color: #931420;
-	padding-bottom: .5em;
+    font-size: 105%;
+    padding-bottom: .25em;
 }
-aside p {
-	margin-bottom: .5em;
+aside img {
+    padding-bottom: 1em;
 }
-aside ul {
-	margin-top: 0;
-	margin-bottom: 1.5em;
-}
-aside li {
-	font-size: .875em;                       /* 14 / 16 */
-	padding-bottom: .35em;
-}
-/* the styles for the footer */
+
+/* footer styles */
 footer {
-	clear: both;
-	width: 100%;                             /* full width of body */
-	border-top: 2px solid #f2972e;
-	padding-top: .7em;
+    background-color: #931420;
+    clear: both;
 }
 footer p {
-	font-size: .75em;                        /* 12 / 16 */
-	text-align: right;
-	margin-right: 2.0202%;                   /* 20 / 990 */
-}
-/* hide the mobile menu initially */
-#mobile_menu {
-	display: none;
-}
-/* media queries */
-
-/* tablet portrait to standard 960 */
-@media only screen and (max-width: 959px) {
-#nav_menu ul li a {
-	font-size: .875em;                      /* 14 / 16 */
-}
-section h1, article h1 {
-	font-size: 1.5em;                       /* 24 / 16 */
-}
-section h2, aside h2 {
-	font-size: 1.125em;                     /* 18 / 16 */
-}
-}
-
-/* mobile landscape to tablet portrait */
-@media only screen and (max-width: 767px) {
-#nav_menu {
-	display: none;
-}
-#mobile_menu {
-	display: block;
-}
-.slicknav_menu {
-	background-color: #facd8a !important;	
-}
-body {
-	width: 100%;                           /* full width of screen */
-	margin: 0;                             /* no margins */
-	border: none;                          /* no border */
-}
-header, footer p {
-	text-align: center;
-}
-footer p { margin-right: 0; }
-header h2 {
-	font-size: 1.625em;                    /* 26 / 16 */
-	margin: .4em 0 .25em 0;
-}
-header h3 {
-	font-size: 1em;                        /* base font size */
-	margin-left: 0;
-}
-header img {
-	float: none;
-}
-section, article {
-	width: 95.9596%;                       /* 100 - (2 * 2.0202) for padding */
-	float: none;
-	margin-right: 2.0202%;                 /* 20 / 990 */
-	padding-right: 0;
-}
-article img {
-	float: left;
-	width: 50%;
-	margin-right: 2%;
-}
-aside {
-	width: 91.9192%;                       /* 100 - (4 * 2.0202) for padding and margins */
-	float: none;
-	margin: 0 2.0202% 2.0202% 2.0202%;     /* 20 / 990 */
-}
-}
-
-/* mobile portrait to mobile landscape */
-@media only screen and (max-width: 479px) {
-
-header h2 {
-	font-size: 1.375em;                    /* 22 / 16 */
-}
-header h3 {
-	font-size: .8125em;                    /* 13 / 16 */
-}
-p {
-	font-size: .875em;                     /* 14 / 16 */
-}
-section h1, article h1, section h2, aside h2 {
-	font-size: 1em;                        /* base font size */
-}
-section li, aside li {
-	font-size: .875em;                     /* 14 / 16 */
-}
-article img {
-	float: none;
-	width: 100%;
-	margin-right: 0;
-}
-aside h3 {
-	font-size: .9375em;                     /* 15 / 16 */
-}
-footer p {
-	font-size: .6875em;                     /* 11 / 16 */
-}
-
+    text-align: center;
+    color: white;
+    padding: 1em 0;
 }
